welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var nums:Array[Int] (num)
  for (i <- 1 to num) {
    
  }
}
